[build-system]
requires = [
  "setuptools",
  "opencv-python-headless"
]
build-backend = "setuptools.build_meta"

[project]
name = "opencv-python"
readme = "README.md"
description = "Force opencv-python-headless instead of opencv-python"
dynamic = ["version"]
authors = [
    {name = "Sandeep Nanda", email = "snanda85@gmail.com"},
]

dependencies = [
  "opencv-python-headless",
]

classifiers = [
  "Intended Audience :: Developers",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/snanda85/force-opencv-python-headless"